# googletest_sample

./: CMakeLists.txt  README.md  build.sh  run_tests.sh
include/: calculator.h  database_interface.h
src/: calculator.cpp  database.cpp  main.cpp
tests/: basic_assertions_test.cpp  fixture_test.cpp  mock_test.cpp
